SubBt/force-app/main/default/objects/RFI_Response__c/fields/Answered__c.field-meta.xml
<CustomField>
    <fullName>Answered__c</fullName>
    <label>Answered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>New RFI Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>