SubBt/force-app/main/default/objects/RFI_Response__c/fields/Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent__c</fullName>
    <label>Date Sent</label>
    <type>Date</type>
</CustomField>