SubBt/force-app/main/default/objects/RFI_Response__c/fields/Other_Responder__c.field-meta.xml
<CustomField>
    <fullName>Other_Responder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Responder</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RFI Responses</relationshipLabel>
    <relationshipName>RFI_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>