SubBt/force-app/main/default/objects/RFI_Response__c/fields/private__c.field-meta.xml
<CustomField>
    <fullName>private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>private</label>
    <type>Checkbox</type>
</CustomField>