SubBt/force-app/main/default/objects/RFI_Response__c/fields/Responder__c.field-meta.xml
<CustomField>
    <fullName>Responder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responder</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Id</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>RFI_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>