SubBt/force-app/main/default/objects/RFI_Response__c/fields/Responderformula__c.field-meta.xml
<CustomField>
    <fullName>Responderformula__c</fullName>
    <formula>if(ISBLANK(Responder__c),
  if(ISBLANK(Other_Responder__c),&apos;&apos;,Other_Responder__r.FirstName+&apos; &apos;+Other_Responder__r.LastName)
,Responder__r.FirstName+&apos; &apos;+Responder__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responder</label>
    <type>Text</type>
</CustomField>