SubBt/force-app/main/default/objects/RFI_Response__c/fields/Response_From_CMP__c.field-meta.xml
<CustomField>
    <fullName>Response_From_CMP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response From CMP</label>
    <type>Checkbox</type>
</CustomField>