SubBt/force-app/main/default/objects/RFI_Response__c/fields/Show_In_Community__c.field-meta.xml
<CustomField>
    <fullName>Show_In_Community__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show In Community</label>
    <type>Checkbox</type>
</CustomField>